; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/speakup/extr_speakup_soft.c_softsynth_poll.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/speakup/extr_speakup_soft.c_softsynth_poll.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i64 }
%struct.file = type { i32 }
%struct.poll_table_struct = type { i32 }

@speakup_event = common dso_local global i32 0, align 4
@speakup_info = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@synth_soft = common dso_local global i32 0, align 4
@EPOLLIN = common dso_local global i32 0, align 4
@EPOLLRDNORM = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.file*, %struct.poll_table_struct*)* @softsynth_poll to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @softsynth_poll(%struct.file* %0, %struct.poll_table_struct* %1) #0 {
  %3 = alloca %struct.file*, align 8
  %4 = alloca %struct.poll_table_struct*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  store %struct.file* %0, %struct.file** %3, align 8
  store %struct.poll_table_struct* %1, %struct.poll_table_struct** %4, align 8
  store i32 0, i32* %6, align 4
  %7 = load %struct.file*, %struct.file** %3, align 8
  %8 = load %struct.poll_table_struct*, %struct.poll_table_struct** %4, align 8
  %9 = call i32 @poll_wait(%struct.file* %7, i32* @speakup_event, %struct.poll_table_struct* %8)
  %10 = load i64, i64* %5, align 8
  %11 = call i32 @spin_lock_irqsave(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @speakup_info, i32 0, i32 0), i64 %10)
  %12 = call i32* (...) @synth_current()
  %13 = icmp eq i32* %12, @synth_soft
  br i1 %13, label %14, label %24

14:                                               ; preds = %2
  %15 = call i32 (...) @synth_buffer_empty()
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %14
  %18 = load i64, i64* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @speakup_info, i32 0, i32 1), align 8
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %24

20:                                               ; preds = %17, %14
  %21 = load i32, i32* @EPOLLIN, align 4
  %22 = load i32, i32* @EPOLLRDNORM, align 4
  %23 = or i32 %21, %22
  store i32 %23, i32* %6, align 4
  br label %24

24:                                               ; preds = %20, %17, %2
  %25 = load i64, i64* %5, align 8
  %26 = call i32 @spin_unlock_irqrestore(i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @speakup_info, i32 0, i32 0), i64 %25)
  %27 = load i32, i32* %6, align 4
  ret i32 %27
}

declare dso_local i32 @poll_wait(%struct.file*, i32*, %struct.poll_table_struct*) #1

declare dso_local i32 @spin_lock_irqsave(i32*, i64) #1

declare dso_local i32* @synth_current(...) #1

declare dso_local i32 @synth_buffer_empty(...) #1

declare dso_local i32 @spin_unlock_irqrestore(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
